--- a/DirectoresTreeTest/DirectoresTreeTest.vcxproj.filters
+++ b/DirectoresTreeTest/DirectoresTreeTest.vcxproj.filters
@@ -15,21 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TestDirectoryWatcher.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
     <ClCompile Include="DirectoresTreeTest.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="DirectoresTree.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="DirectoryNode.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DirectoresTree.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="DirectoryNode.h">
+    <ClInclude Include="TestDirectoryWatcher.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
